--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
           <div class="d-flex flex-column align-items-start p-3 gap-4">
             <img src="./images/wigo-logo.png" alt="wiGO" class="img-fluid" style="width: 180px;">
             <p>Empowering campus communities through smart commerce <br> and Easy Buying and Selling.</p>
-            <p>support@wigomarket.com</p>
+            <p>support@wigo1market.com</p>
             <img src="./images/appstores.png" alt="appstores" class="img-fluid" style="width: 200px;">
           </div>
 
