updated contact form section

--- a/index.html
+++ b/index.html
@@ -473,8 +473,11 @@
 
       <!-- Contact Form Section -->
       <section class="w-100 py-5 px-3">
-        <div class="container p-5 gap-5 d-flex flex-column flex-md-row align-items-center justify-content-center">
+        <div class="container  row">
+<div class="col-12 col-md-8">
           <img src="./images/people/phone-guy.png" alt="phone-guy" class="img-fluid order-2 order-md-1 scroll-animate-left" style="max-width: 822px; width: 100%;">
+</div>
+<div class="col-12 col-md-4">
           <div class="d-flex flex-column gap-4 order-1 order-md-2 scroll-animate-right">
             <h3 class="mb-4 form-title">Need Help? We're Here for You</h3>
             
@@ -501,6 +504,7 @@
               </button>
             </form>
           </div>
+</div>
         </div>
       </section>
 
